--- a/css/main.css
+++ b/css/main.css
@@ -380,6 +380,7 @@ html {
 }
 
 body {
+  overflow-x: hidden;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -523,6 +524,9 @@ img {
   .header {
     border-bottom: 1px solid #00000036;
   }
+  body {
+    overflow-y: hidden;
+  }
   .header__nav {
     display: none;
   }
@@ -553,13 +557,13 @@ img {
     margin-bottom: 5px;
   }
   .header__item:nth-child(4) {
-    margin-bottom: 10px;
+    margin-bottom: 20px;
   }
   .header__item:nth-child(5) {
-    margin-bottom: 25px;
+    margin-bottom: 30px;
   }
   .header__item:nth-child(6) {
-    margin-bottom: 15px;
+    margin-bottom: 20px;
   }
   .header__item__link {
     color: #FFFFFF;
