--- a/css/main.css
+++ b/css/main.css
@@ -534,7 +534,7 @@ img {
     position: absolute;
     background-color: gray;
     top: 0;
-    right: -5px;
+    right: 0;
     max-width: 50%;
     width: 100%;
     height: 100vh;
