--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -93,7 +93,7 @@
       position: absolute;
       background-color: gray;
       top:0;
-      right: -5px;
+      right: 0;
       max-width: 50%;
       width: 100%;
       height: 100vh;
