--- a/scss/blocks/_great.scss
+++ b/scss/blocks/_great.scss
@@ -109,9 +109,9 @@
     flex-direction: column;
     justify-content: center;
     &::after{
-      width:360px ;
-      height: 263px;
-      background-size:360px 263px;
+      width: 355px;px ;
+      height: 260px;
+      background-size:355px 260px;
       background-image: url(../../img/greatsmall.png);
       margin: 0 auto;
     }
