--- a/scss/blocks/_great.scss
+++ b/scss/blocks/_great.scss
@@ -109,7 +109,7 @@
     flex-direction: column;
     justify-content: center;
     &::after{
-      width: 355px;px ;
+      width: 355px ;
       height: 260px;
       background-size:355px 260px;
       background-image: url(../../img/greatsmall.png);
