--- a/css/main.css
+++ b/css/main.css
@@ -2428,6 +2428,24 @@ img {
   }
 }
 
+@media only screen and (max-width: 400px) {
+  .great__inner {
+    margin: 0 auto;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .great__inner::after {
+    width: 300px;
+    height: 200px;
+    background-size: 300px 200px;
+  }
+}
+
 .wahid {
   margin-bottom: 160px;
 }
